--- a/src/scss/pageActivity/pageBranch/_addACT.scss
+++ b/src/scss/pageActivity/pageBranch/_addACT.scss
@@ -320,9 +320,12 @@
 // 		background-size: 200%;
 // 	}
 // }
-.googleMap.a-mL{
-	height: 100vh;
+.a-add-google{
+	.googleMap{
+		height: 100%;
+	}
 }
+
 .a-add-title{
 	// padding-bottom: 10px;
 	font-size: $fz-h2;
