--- a/src/scss/pageActivity/_pageActivity.scss
+++ b/src/scss/pageActivity/_pageActivity.scss
@@ -30,6 +30,10 @@
 		height: 30px;
 		padding-left:28px;
 		z-index: 100;
+		font-family: Roboto;
+        font-size: 15px;
+        font-weight: 300;
+        text-overflow: ellipsis;
 	}
 	a{
 		text-decoration:none !important;
@@ -42,6 +46,10 @@
 		outline: none;
 	}
 }//body END
+.a-main-map{
+	margin-top: 8vh;
+	height: 92vh;
+}
 
 .a-relative{
 	height: 100%;
@@ -97,8 +105,9 @@
 	}
 }
 .a-searchInput{
-	display: inline-block;
+	display:block;
 	position: relative;
+	// height: 0px;
 	// width: 320px;
 	// margin: auto;
 	i{
@@ -107,7 +116,7 @@
 		color:#353535;
 		position: absolute;
 		left: 5px;
-		top: 24px;
+		top: 4px;
 		bottom: 0;
 		margin: 0;
 	}
@@ -115,16 +124,11 @@
  #pac-input {
         z-index: 10;
         /*position: absolute;*/
-        font-family: Roboto;
-        font-size: 15px;
-        font-weight: 300;
-        // margin-left: 12px;
-        // padding: 0 11px 0 13px;
-        text-overflow: ellipsis;
-       width: 425px;
+        margin: 0;
+       width: 318px;
        height: 30px;
         text-align: left;
-        margin-top: 20px;
+        // margin-top: 20px;
         padding-left: 28px;
       }
 	
@@ -136,34 +140,45 @@
         font-family: Roboto;
       }
 }
+.a-btn{
+	margin-top: 20px;
+	.btn-lg{
+		margin: 20px  30px 0px 30px;
+	}
+}
 // #a-panel-date{
 // 	margin-top: 20px;
 
 // }
 .a-date-control{
-	width: 200px
+	width: 318px
 }
 .a-panel{
 	overflow:hidden;
 	position: relative;
 	text-align: left;
-	margin-top: 70px;
+	margin-top: 8vh;
 	// border-radius: 50%;
 	width: 100%;
+
+
 	box-sizing:border-box;
 	height: 0;
 	// padding: 50%;
 	// height: 600px;
-	height: 100vh;
+	height: 92vh;
 
 	background: url("http://cdn.allwallpaper.in/wallpapers/3200x2000/13325/outer-space-stars-galaxies-3200x2000-wallpaper.jpg");
 	background-size:100% 100%;
 	background-position:50% 80%;
 	background-repeat: no-repeat;
 
-
+	.a-text{
+		display: block;
+		margin: 10px 0;
+	}
 	input{
-		width: 230px;
+		width: 318px;
 
 	}
 	.a-panel-item{
@@ -181,14 +196,14 @@
 		a:first-child{
 			
 			
-			background-color: #5694CD;
+			background-color: #DCAE26;
 		}
 		a{
 			display: inline-block;
 			padding:10px;
 			&:hover{
 
-				background-color: #5694CD;
+				background-color: #DCAE26;
 			}
 		}
 	}
@@ -202,13 +217,26 @@
 	
 	}
 }
+#wrapper{
+	position: relative;
+	.fa-clock-o{
+		position: absolute;
+				  top: 0;
+				  bottom: 0;
+				  left: 5px;
+				  
+				  margin: auto;
+		font-size: 22px;
+		line-height: 30px;
+	}
+}
 .a-title{
 	font-size: $fz-h2;
 	color:$white;
 	margin: 20px;
 }
 .a-panel-control{
-	// width: 320px;
+	// width: 320@#ppx;
 	height: 200px;
 	margin: auto;
 	
@@ -222,6 +250,7 @@
 	text-shadow:2px 2px 5px #666;
 
 }
+
 .a-tab{
 
 	div{
@@ -275,6 +304,7 @@
 		line-height: 38px;
 	}
 }
+
 // .a-banner{
 // 	display: none;
 // }
