--- a/src/scss/assets/_font.scss
+++ b/src/scss/assets/_font.scss
@@ -1,4 +1,4 @@
-
+$font-family:"微軟正黑體",Arial,FontAwesome;
 //字型大小
 $fz-base:10px;
 
@@ -19,5 +19,3 @@ $fz-h6   :  $fz-base*1.6;
 $fz-h7   :  $fz-base*1.2;
 
 $fz-p    :  $fz-base*1.8;
-
-$font-family:"微軟正黑體";
