--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,8 +8,7 @@
 @import "../libs/font-awesome/css/font-awesome.min.css";
 
 @import "layout/layout";
-// @import "pageIndex/pageIndex";
-@import "Index/Index";
+@import "pageIndex/pageIndex";
 @import "pageActivity/pageActivity";
 @import "pageForum/pageForum";
 @import "pagePhoto/pagePhoto";
