--- a/src/scss/layout/_xs.scss
+++ b/src/scss/layout/_xs.scss
@@ -22,21 +22,15 @@
         }
 
         &.menu {
-            background-color: $o-black;
+            background-color: $black;
             margin: auto;
             text-align: center;
             position: absolute;
-            top: 0px;
-            left: -300px;
-            bottom: 0;
-            height: 700px;
-            width: 700px;
-            border-radius: 50%;
-            padding-top: 400px;
-            padding-left: 200px;
+            top: 79px;
+            left: -100%;
+            // height: 650px;
+            width: 100%;
             z-index: -2;
-            transform: scale(0);
-            transition: .8s cubic-bezier(.13,.27,.06,.82);
             li {
                 display: block;
                 text-align: center;
@@ -49,7 +43,6 @@
                 color: $white;
             }
         }
-
         &.signArea {
             position: absolute;
             top: 40px;
@@ -72,6 +65,11 @@
     }
     #navButton{
       display: block;
+      line-height: 40px;
+      text-align: center;
+      i{
+        font-size: 18px;
+      }
     }
 
 }
